--- a/Unitimer/MainWindow.xaml
+++ b/Unitimer/MainWindow.xaml
@@ -3,37 +3,30 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Unitimer"
+        xmlns:local="clr-namespace:Unitimer" WindowStyle="SingleBorderWindow" WindowState="Maximized"
         mc:Ignorable="d" FontSize="14" Loaded="Window_Loaded"
         Title="UniTimer Solutions" Height="450" Width="800">
 
     <Window.Resources>
         <Style TargetType="MenuItem" >
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Margin" Value="4,0,4,0"/>
+            <Setter Property="Margin" Value="4,0"/>
+        </Style>
+        <Style x:Key="MenuItemStyle1" TargetType="{x:Type MenuItem}">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Margin" Value="4,0"/>
         </Style>
     </Window.Resources>
     <Grid>
         <DockPanel LastChildFill="True">
-            <Grid DockPanel.Dock="Top" Height="32">
-                <Menu x:Name="MainNavigationMenu" VerticalAlignment="Center" Padding="4">
-                    <MenuItem Header="Home" /> 
-                    <MenuItem Header="Cohorts"> 
-                    </MenuItem>
-                    <MenuItem Header="Lecturer Halls"> 
-                    </MenuItem>
-                    <MenuItem Header="Lecturers"> 
-                    </MenuItem>
-                    <MenuItem Header="Programmes"> 
-                    </MenuItem>
-                    <MenuItem Header="Timetabling"> 
-                    </MenuItem>
-                    <MenuItem Header="Administration"> 
-                    </MenuItem>
-                    <MenuItem Header="Account"> 
-                    </MenuItem>
-                    <MenuItem Header="Help"> 
-                    </MenuItem>
+            <Grid DockPanel.Dock="Top" Height="32" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
+                <Menu x:Name="MainNavigationMenu" VerticalAlignment="Center" Padding="2" HorizontalAlignment="Left">
+                    <Menu.Resources>
+                        <Style TargetType="MenuItem" >
+                            <Setter Property="FontSize" Value="16"/>
+                            <Setter Property="Margin" Value="4,0"/>
+                        </Style> 
+                    </Menu.Resources>
                 </Menu>
             </Grid>
             <Grid DockPanel.Dock="Bottom" Height="32" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
@@ -41,14 +34,14 @@
                     <Label Content="Version"/>
                     <Label Content="Role"/>
                     <Label Content="User"/>
-                    <Label Content="DateTime"/> 
+                    <Label Content="DateTime"/>
                     <Label Content="Logout" HorizontalAlignment="Center"/>
                 </UniformGrid>
             </Grid>
-            <Grid>
+            <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="0,1,0,0">
                 <!--<Frame x:Name="MainContentArea" HorizontalAlignment="Center" VerticalAlignment="Center" />-->
-                <TabControl x:Name="MainContentTabControl">
-                    
+                <TabControl x:Name="MainContentTabControl" >
+
                 </TabControl>
             </Grid>
         </DockPanel>
